# restudy_ci

./: .coveragerc  .gitignore  README.md  main.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml  re_main.yml
app/blog/: models.py  tests.py  views.py
app/blog/migrations/: 0001_initial.py
app/config/: settings.py  urls.py
app/templates/blog/: post-list.html
