[tool.poetry]
name = "restudy_ci"
version = "0.1.0"
description = ""
authors = ["parkhongbeen <pack122@naver.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
codecov = "^2.0.22"
pytest-cov = "^2.8.1"
pytest = "^5.4.1"
coverage = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
